@@ -610,29 +610,124 @@ operator|-
 literal|1
 argument_list|)
 decl_stmt|;
+comment|// We construct four separate planes, and evaluate which one includes all interior points with least overlap
+specifier|final
+name|SidedPlane
+name|candidate1
+init|=
+name|SidedPlane
+operator|.
+name|constructNormalizedThreePointSidedPlane
+argument_list|(
+name|currentSegment
+operator|.
+name|start
+argument_list|,
+name|prevSegment
+operator|.
+name|URHC
+argument_list|,
+name|currentSegment
+operator|.
+name|ULHC
+argument_list|,
+name|currentSegment
+operator|.
+name|LLHC
+argument_list|)
+decl_stmt|;
+specifier|final
+name|SidedPlane
+name|candidate2
+init|=
+name|SidedPlane
+operator|.
+name|constructNormalizedThreePointSidedPlane
+argument_list|(
+name|currentSegment
+operator|.
+name|start
+argument_list|,
+name|currentSegment
+operator|.
+name|ULHC
+argument_list|,
+name|currentSegment
+operator|.
+name|LLHC
+argument_list|,
+name|prevSegment
+operator|.
+name|LRHC
+argument_list|)
+decl_stmt|;
+specifier|final
+name|SidedPlane
+name|candidate3
+init|=
+name|SidedPlane
+operator|.
+name|constructNormalizedThreePointSidedPlane
+argument_list|(
+name|currentSegment
+operator|.
+name|start
+argument_list|,
+name|currentSegment
+operator|.
+name|LLHC
+argument_list|,
+name|prevSegment
+operator|.
+name|LRHC
+argument_list|,
+name|prevSegment
+operator|.
+name|URHC
+argument_list|)
+decl_stmt|;
+specifier|final
+name|SidedPlane
+name|candidate4
+init|=
+name|SidedPlane
+operator|.
+name|constructNormalizedThreePointSidedPlane
+argument_list|(
+name|currentSegment
+operator|.
+name|start
+argument_list|,
+name|prevSegment
+operator|.
+name|LRHC
+argument_list|,
+name|prevSegment
+operator|.
+name|URHC
+argument_list|,
+name|currentSegment
+operator|.
+name|ULHC
+argument_list|)
+decl_stmt|;
 if|if
 condition|(
-name|prevSegment
-operator|.
-name|upperConnectingPlane
-operator|.
-name|isNumericallyIdentical
-argument_list|(
-name|currentSegment
-operator|.
-name|upperConnectingPlane
-argument_list|)
+name|candidate1
+operator|==
+literal|null
 operator|&&
-name|prevSegment
-operator|.
-name|lowerConnectingPlane
-operator|.
-name|isNumericallyIdentical
-argument_list|(
-name|currentSegment
-operator|.
-name|lowerConnectingPlane
-argument_list|)
+name|candidate2
+operator|==
+literal|null
+operator|&&
+name|candidate3
+operator|==
+literal|null
+operator|&&
+name|candidate4
+operator|==
+literal|null
 condition|)
 block|{
 comment|// The planes are identical.  We don't need a circle at all.  Special constructor...
@@ -686,6 +781,14 @@ argument_list|,
 name|currentSegment
 operator|.
 name|LLHC
+argument_list|,
+name|candidate1
+argument_list|,
+name|candidate2
+argument_list|,
+name|candidate3
+argument_list|,
+name|candidate4
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -2127,19 +2230,35 @@ name|nextCutoffPlane
 parameter_list|,
 specifier|final
 name|GeoPoint
-name|prevUpperGeoPoint
+name|notCand2Point
 parameter_list|,
 specifier|final
 name|GeoPoint
-name|prevLowerGeoPoint
+name|notCand1Point
 parameter_list|,
 specifier|final
 name|GeoPoint
-name|nextUpperGeoPoint
+name|notCand3Point
 parameter_list|,
 specifier|final
 name|GeoPoint
-name|nextLowerGeoPoint
+name|notCand4Point
+parameter_list|,
+specifier|final
+name|SidedPlane
+name|candidate1
+parameter_list|,
+specifier|final
+name|SidedPlane
+name|candidate2
+parameter_list|,
+specifier|final
+name|SidedPlane
+name|candidate3
+parameter_list|,
+specifier|final
+name|SidedPlane
+name|candidate4
 parameter_list|)
 block|{
 comment|// Note: What we really need is a single plane that goes through all four points.
@@ -2158,117 +2277,74 @@ operator|=
 name|point
 expr_stmt|;
 comment|// We construct four separate planes, and evaluate which one includes all interior points with least overlap
-specifier|final
-name|SidedPlane
-name|candidate1
-init|=
-name|SidedPlane
-operator|.
-name|constructNormalizedThreePointSidedPlane
-argument_list|(
-name|point
-argument_list|,
-name|prevUpperGeoPoint
-argument_list|,
-name|nextUpperGeoPoint
-argument_list|,
-name|nextLowerGeoPoint
-argument_list|)
-decl_stmt|;
-specifier|final
-name|SidedPlane
-name|candidate2
-init|=
-name|SidedPlane
-operator|.
-name|constructNormalizedThreePointSidedPlane
-argument_list|(
-name|point
-argument_list|,
-name|nextUpperGeoPoint
-argument_list|,
-name|nextLowerGeoPoint
-argument_list|,
-name|prevLowerGeoPoint
-argument_list|)
-decl_stmt|;
-specifier|final
-name|SidedPlane
-name|candidate3
-init|=
-name|SidedPlane
-operator|.
-name|constructNormalizedThreePointSidedPlane
-argument_list|(
-name|point
-argument_list|,
-name|nextLowerGeoPoint
-argument_list|,
-name|prevLowerGeoPoint
-argument_list|,
-name|prevUpperGeoPoint
-argument_list|)
-decl_stmt|;
-specifier|final
-name|SidedPlane
-name|candidate4
-init|=
-name|SidedPlane
-operator|.
-name|constructNormalizedThreePointSidedPlane
-argument_list|(
-name|point
-argument_list|,
-name|prevLowerGeoPoint
-argument_list|,
-name|prevUpperGeoPoint
-argument_list|,
-name|nextUpperGeoPoint
-argument_list|)
-decl_stmt|;
+comment|// (Constructed beforehand because we need them for degeneracy check)
 specifier|final
 name|boolean
 name|cand1IsOtherWithin
 init|=
 name|candidate1
+operator|!=
+literal|null
+condition|?
+name|candidate1
 operator|.
 name|isWithin
 argument_list|(
-name|prevLowerGeoPoint
+name|notCand1Point
 argument_list|)
+else|:
+literal|false
 decl_stmt|;
 specifier|final
 name|boolean
 name|cand2IsOtherWithin
 init|=
 name|candidate2
+operator|!=
+literal|null
+condition|?
+name|candidate2
 operator|.
 name|isWithin
 argument_list|(
-name|prevUpperGeoPoint
+name|notCand2Point
 argument_list|)
+else|:
+literal|false
 decl_stmt|;
 specifier|final
 name|boolean
 name|cand3IsOtherWithin
 init|=
 name|candidate3
+operator|!=
+literal|null
+condition|?
+name|candidate3
 operator|.
 name|isWithin
 argument_list|(
-name|nextUpperGeoPoint
+name|notCand3Point
 argument_list|)
+else|:
+literal|false
 decl_stmt|;
 specifier|final
 name|boolean
 name|cand4IsOtherWithin
 init|=
 name|candidate4
+operator|!=
+literal|null
+condition|?
+name|candidate4
 operator|.
 name|isWithin
 argument_list|(
-name|nextLowerGeoPoint
+name|notCand4Point
 argument_list|)
+else|:
+literal|false
 decl_stmt|;
 if|if
 condition|(
@@ -2297,13 +2373,13 @@ operator|new
 name|GeoPoint
 index|[]
 block|{
-name|prevUpperGeoPoint
+name|notCand2Point
 block|,
-name|nextUpperGeoPoint
+name|notCand3Point
 block|,
-name|prevLowerGeoPoint
+name|notCand1Point
 block|,
-name|nextLowerGeoPoint
+name|notCand4Point
 block|}
 expr_stmt|;
 name|this
@@ -2349,11 +2425,11 @@ operator|new
 name|GeoPoint
 index|[]
 block|{
-name|prevUpperGeoPoint
+name|notCand2Point
 block|,
-name|nextUpperGeoPoint
+name|notCand3Point
 block|,
-name|nextLowerGeoPoint
+name|notCand4Point
 block|}
 expr_stmt|;
 name|this
@@ -2393,11 +2469,11 @@ operator|new
 name|GeoPoint
 index|[]
 block|{
-name|nextUpperGeoPoint
+name|notCand3Point
 block|,
-name|nextLowerGeoPoint
+name|notCand4Point
 block|,
-name|prevLowerGeoPoint
+name|notCand1Point
 block|}
 expr_stmt|;
 name|this
@@ -2436,11 +2512,11 @@ operator|new
 name|GeoPoint
 index|[]
 block|{
-name|nextLowerGeoPoint
+name|notCand4Point
 block|,
-name|prevLowerGeoPoint
+name|notCand1Point
 block|,
-name|prevUpperGeoPoint
+name|notCand2Point
 block|}
 expr_stmt|;
 name|this
@@ -2479,11 +2555,11 @@ operator|new
 name|GeoPoint
 index|[]
 block|{
-name|prevLowerGeoPoint
+name|notCand1Point
 block|,
-name|prevUpperGeoPoint
+name|notCand2Point
 block|,
-name|nextUpperGeoPoint
+name|notCand3Point
 block|}
 expr_stmt|;
 name|this
