@@ -32,6 +32,18 @@ end_import
 
 begin_import
 import|import static
+name|java
+operator|.
+name|lang
+operator|.
+name|Math
+operator|.
+name|toRadians
+import|;
+end_import
+
+begin_import
+import|import static
 name|org
 operator|.
 name|junit
@@ -1554,6 +1566,85 @@ argument_list|,
 literal|0.000001
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testCoLinear
+specifier|public
+name|void
+name|testCoLinear
+parameter_list|()
+block|{
+comment|// p1: (12,-90), p2: (11, -55), (129, -90)
+name|GeoPath
+name|p
+init|=
+operator|new
+name|GeoPath
+argument_list|(
+name|PlanetModel
+operator|.
+name|SPHERE
+argument_list|,
+literal|0.1
+argument_list|)
+decl_stmt|;
+name|p
+operator|.
+name|addPoint
+argument_list|(
+name|toRadians
+argument_list|(
+operator|-
+literal|90
+argument_list|)
+argument_list|,
+name|toRadians
+argument_list|(
+literal|12
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|//south pole
+name|p
+operator|.
+name|addPoint
+argument_list|(
+name|toRadians
+argument_list|(
+operator|-
+literal|55
+argument_list|)
+argument_list|,
+name|toRadians
+argument_list|(
+literal|11
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|p
+operator|.
+name|addPoint
+argument_list|(
+name|toRadians
+argument_list|(
+operator|-
+literal|90
+argument_list|)
+argument_list|,
+name|toRadians
+argument_list|(
+literal|129
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|//south pole again
+name|p
+operator|.
+name|done
+argument_list|()
+expr_stmt|;
+comment|//at least test this doesn't bomb like it used too -- LUCENE-6520
 block|}
 block|}
 end_class
